@@ -3,6 +3,7 @@ package com.hedera.services.bdd.suites.contract.records.batch;
 
 import static com.hedera.node.config.types.StreamMode.RECORDS;
 import static com.hedera.services.bdd.junit.RepeatableReason.NEEDS_VIRTUAL_TIME_FOR_FAST_EXECUTION;
+import static com.hedera.services.bdd.junit.TestTags.MATS;
 import static com.hedera.services.bdd.junit.TestTags.SMART_CONTRACT;
 import static com.hedera.services.bdd.spec.HapiPropertySource.asAccount;
 import static com.hedera.services.bdd.spec.HapiSpec.hapiTest;
@@ -56,7 +57,6 @@ import java.util.stream.Stream;
 import org.apache.tuweni.bytes.Bytes32;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Tag;
@@ -66,7 +66,6 @@ import org.junit.jupiter.api.Tag;
 @Tag(SMART_CONTRACT)
 @HapiTestLifecycle
 @DisplayName("Records Suite")
-@Disabled
 public class AtomicRecordsSuite {
 
     public static final String LOG_NOW = "logNow";
@@ -105,6 +104,7 @@ public class AtomicRecordsSuite {
     }
 
     @HapiTest
+    @Tag(MATS)
     final Stream<DynamicTest> txRecordsContainValidTransfers() {
         final var contract = "ParentChildTransfer";
 
@@ -198,7 +198,7 @@ public class AtomicRecordsSuite {
                     final var firstCallLogs =
                             firstCallRecord.getContractCallResult().getLogInfoList();
                     final var firstCallTimeLogData =
-                            firstCallLogs.get(0).getData().toByteArray();
+                            firstCallLogs.getFirst().getData().toByteArray();
                     final var firstCallBlockTime =
                             Longs.fromByteArray(Arrays.copyOfRange(firstCallTimeLogData, 24, 32));
 
@@ -206,7 +206,7 @@ public class AtomicRecordsSuite {
                     final var secondCallLogs =
                             secondCallRecord.getContractCallResult().getLogInfoList();
                     final var secondCallTimeLogData =
-                            secondCallLogs.get(0).getData().toByteArray();
+                            secondCallLogs.getFirst().getData().toByteArray();
                     final var secondCallBlockTime =
                             Longs.fromByteArray(Arrays.copyOfRange(secondCallTimeLogData, 24, 32));
 
@@ -312,6 +312,7 @@ public class AtomicRecordsSuite {
 
     @DisplayName("Block Hash Returns The Hash Of The Latest 256 Blocks")
     @RepeatableHapiTest(NEEDS_VIRTUAL_TIME_FOR_FAST_EXECUTION)
+    @Tag(MATS)
     final Stream<DynamicTest> blockHashReturnsTheHashOfTheLatest256Blocks() {
         final var contract = "EmitBlockTimestamp";
         return hapiTest(
